--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -16,7 +16,10 @@
     <!-- Second factor messages -->
     <string name="auth_error_password">Incorrect password.</string>
     <string name="auth_error_password_required">Password is required.</string>
+
+    <!-- Custom initialize -->
     <string name="custom_initialize_button">Custom initialize</string>
+    <string name="hint_locale">locale</string>
     <string name="hint_public_key">Public Key</string>
     <string name="hint_access_token">Access token</string>
     <string name="hint_preference_id">Preference Id</string>
