* Added one tap checkbox to config custom initialization

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="hint_public_key">Public Key</string>
     <string name="hint_access_token">Access token</string>
     <string name="hint_preference_id">Preference Id</string>
+    <string name="one_tap_check">Show One Tap</string>
     <string name="clear_label">clear</string>
 </resources>
